--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -99,7 +99,7 @@
                             <a class="brand" href="<?php echo $this->url(array('controller' => 'index', 'action'     => 'index')); ?>">
                               <!--<i class="icon-home icon-white"></i>-->
                                 <img src="/img/favico.png" width="32" alt="" />
-                                SMKN 4 Bandung
+                                TI SMKN 4 Bandung
                             </a>
                             <ul class="nav user_menu pull-right">
                                 <li class="dropdown">
