--- a/application/modules/admin/views/scripts/mading/index.phtml
+++ b/application/modules/admin/views/scripts/mading/index.phtml
@@ -1,5 +1,6 @@
 <?php $this->MinifyHeadScript()->appendFile($this->baseUrl('lib/jquery-ui/jquery-ui-1.8.23.custom.min.js')); ?>
 <?php $this->MinifyHeadScript()->appendFile($this->baseUrl('lib/jCarousel/lib/jquery.jcarousel.min.js')); ?>
+<?php $this->MinifyHeadScript()->appendFile($this->baseUrl('js/mading/index.js')); ?>
 <?php $this->MinifyHeadLink()->appendStylesheet($this->baseUrl('css/mading/index.css')); ?>
 <?php echo $this->flashMessenger($this->messages); ?>
 
@@ -13,7 +14,6 @@
     </div>
     <div class="pull-right">
         <img id="ajax-process" src="/img/ajax_loader.gif" style="display: none;" alt="" />
-        <p class="alert alert-info" id="ajax-message" style="display: none;"></p>
     </div>
 </div>
 <div class="row-fluid">
@@ -48,7 +48,7 @@
                                     <a href="<?php echo $updateUrl; ?>" title="Sunting">
                                         <i class="icon-edit"></i>
                                     </a>
-                                    <a href="#" title="Hapus" class="remove-mading"
+                                    <a href="javascript:void(0)" title="Hapus" class="remove-mading"
                                        data-remove-id="<?php echo $mading['id']; ?>">
                                         <i class="icon-remove"></i>
                                     </a>
@@ -61,60 +61,3 @@
         </ul>
     </div>
 </div>
-
-<script type="text/javascript">
-    $(function() {
-        $("#mading").sortable({
-            handle: '.handle',
-            placeholder: 'sortable-placeholder',
-            forcePlaceholderSize: true,
-            animation: {
-                duration: 800,
-                easing: 'linear'
-            },
-            update: function(event, ui) {
-                var order = $("#mading").sortable('serialize');
-                $.ajax({
-                    url: '/admin/mading/order',
-                    type: 'post',
-                    data: order,
-                    cache: false,
-                });
-            }
-        });
-
-        $('#mading').jcarousel({
-            scroll: 1,
-            visible: 4
-        });
-
-        $('#mading .remove-mading').click(function(event) {
-            var id = $(this).data('remove-id');
-
-            event.preventDefault();
-            if (!confirm('Apakah anda yakin?'))
-                return false;
-
-            $.ajax({
-                url: '/admin/mading/delete',
-                type: 'post',
-                data: 'id=' + id,
-                cache: false,
-                success: function(response, status, xhr) {
-                    if ('success' == status) {
-                        $("#mading_" + id).fadeOut(300, function() {
-                            $(this).remove();
-                        });
-                    }
-                }
-            });
-        });
-
-        $(document).ajaxStart(function() {
-            $("#ajax-process").show();
-        }).ajaxStop(function() {
-            $("#ajax-process").hide();
-        })
-
-    })
-</script>
