--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -55,12 +55,12 @@
 <div class="jurusan row-fluid">
     <div class="inner">
         <div class="span4">
-            <i class="icon-desktop icon-2x"></i>
+            <i class="icon-globe icon-2x" style="margin-left: 10px;"></i>
             <h3>Rekayasa Perangkat Lunak</h3>
             <p>Rekayasa Perangkat Lunak, Teknik Komputer dan Jaringan, dan Multimedia.</p>
         </div>
         <div class="span4">
-            <i class="icon-bolt icon-2x" style="margin-left: 10px;"></i>
+            <i class="icon-desktop icon-2x"></i>
             <h3>Teknik Komputer dan Jaringan</h3>
             <p>Teknik Instalasi Tenaga Listrik, dan Teknik Otomasi Industri.</p>
         </div>
