--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -108,6 +108,7 @@
                     <!--                    <a href="#">Lihat Semua Artikel</a>-->
                 </div>
             </div>
+            <?php echo Zend_Controller_Front::getInstance()->getRequest()->getHttpHost()  . $this->url(); ?>
             <ul class="unstyled article">
                 <?php foreach ($this->latestArticles as $index => $article): ?>
                     <?php
