Fix bug tinimce image

--- a/application/views/scripts/sidebar.phtml
+++ b/application/views/scripts/sidebar.phtml
@@ -4,7 +4,21 @@
 <?php $this->minifyHeadScript()->appendFile($this->baseUrl('js/sidebar.js')); ?>
 
 <div class="widget" style="padding: 0; border-radius: 5px;height: 600px;">
-    <a class="twitter-timeline" width="100%" height="100%" href="https://twitter.com/smk4bdg" data-widget-id="307192253972090881">Tweets by @smk4bdg</a>
+    <a class="twitter-timeline" width="100%" height="100%" href="https://twitter.com/smk4bdg" data-widget-id="309296562264215552">Tweets by @smk4bdg</a>
+    <script>!function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (!d.getElementById(id)) {
+                js = d.createElement(s);
+                js.id = id;
+                js.src = "//platform.twitter.com/widgets.js";
+                fjs.parentNode.insertBefore(js, fjs);
+            }
+        }(document, "script", "twitter-wjs");</script>
+    <style type="text/css">
+        #twitter-widget-0 {
+            width: 100%;
+        }
+    </style>
 </div>
 
 <div class = "agenda widget top-blue">
