--- a/application/views/scripts/news/view.phtml
+++ b/application/views/scripts/news/view.phtml
@@ -18,7 +18,6 @@ $permaLink = $this->url(array(
 $tweet = "https://twitter.com/intent/tweet?source=webclient&text={$permaLink}";
 
 $fullUrl = 'http://' . Zend_Controller_Front::getInstance()->getRequest()->getHttpHost() . $this->url();
-
 ?>
 
 
@@ -34,7 +33,9 @@ $fullUrl = 'http://' . Zend_Controller_Front::getInstance()->getRequest()->getHt
                         <li >
                             <script src='http://connect.facebook.net/en_US/all.js'></script>
                             <a onclick='postToFeed(); return false;'>Post to Feed</a>
-                            <p id='msg'></p>
+                            <p id='msg'>
+
+                            </p>
                             <script> 
                                 FB.init({appId:547516891937024, status: true, cookie: true});
 
@@ -43,16 +44,19 @@ $fullUrl = 'http://' . Zend_Controller_Front::getInstance()->getRequest()->getHt
                                     // calling the API ...
                                     var obj = {
                                         method: 'feed',
-                                        redirect_uri: '<?php echo $fullUrl; ?>',
-                                        link: '<?php echo $fullUrl; ?>',
+                                        //                                        redirect_uri: '<?php echo $fullUrl; ?>',
+                                        //                                        link: '<?php echo $fullUrl; ?>',
+                                        link : 'www.w3schools.com',
                                         picture: 'http://fbrell.com/f8.jpg',
-                                        name: '<?php echo $this->news['title']; ?>',
+                                        //                                        name: '<?php echo $this->news['title']; ?>',
+                                        name: 'haha',
                                         caption: 'Reference Documentation',
-                                        description: 'balalalala'
+                                        //                                        description: '<?php echo strip_tags($this->news['content']); ?>'
+                                        description: 'haha'
                                     };
 
                                     function callback(response) {
-                                        document.getElementById('msg').innerHTML = "Post ID: " + response['post_id'];
+                                        //                                        document.getElementById('msg').innerHTML = "Post ID: " + response['post_id'];
                                     }
 
                                     FB.ui(obj, callback);
@@ -60,9 +64,6 @@ $fullUrl = 'http://' . Zend_Controller_Front::getInstance()->getRequest()->getHt
     
                             </script>
                         </li>
-                        <?php echo $this->url(); ?>
-                        <?php echo $this->baseUrl($this->url()); ?>
-                        <?php echo Zend_Controller_Front::getInstance()->getRequest()->getHttpHost() . $this->url(); ?>
                         <li>
 
 
@@ -97,15 +98,8 @@ $fullUrl = 'http://' . Zend_Controller_Front::getInstance()->getRequest()->getHt
 
             <?php echo $this->news['content'] ?>
 
-            <?php
-            $link = $this->url(array('controller' => 'news', 'action' => 'view', 'id' => $news['id']));
-            ?>
 
-            <iframe src="http://www.facebook.com/plugins/like.php?href=<?php echo $link; ?>"
-                    scrolling="no" frameborder="0"
-                    style="border:none; width:450px; height:80px">
 
-            </iframe>
             <div class="clearfix"></div>
 
             <ul class="unstyled inline well" style="border-radius: 0;padding: 5px;">
