--- a/application/modules/admin/views/scripts/account/index.phtml
+++ b/application/modules/admin/views/scripts/account/index.phtml
@@ -1,132 +1,133 @@
 <?php echo $this->flashMessenger($this->messages); ?>
 
 <form action="" method="post">
-  <div class="row-fluid">
-    <div class="pull-left">
-      <h3 style="display: inline">Akun</h3>
-      <a href="<?php echo $this->url(array('action' => 'create')); ?>" class="btn btn-link label label-success">
-        Buat Akun
-      </a>
-    </div>
-    <div class="pull-right">
-      <?php echo $this->itemCountPerPageSelect('filter[row]', $this->filter['row']); ?>
-      <?php echo $this->setRowButton('action', 'filter'); ?>
-    </div>
-  </div>
-  <br />
-  <div class="row-fluid">
     <div class="row-fluid">
-      <div class="pull-left">
-        <button class="btn btn-mini btn-danger"
-                name="action"
-                value="delete"
-                onclick="return confirm('Apakah anda yakin ingin menghapus semua akun yang dipilih?')">
-          <i class="icon-trash"></i>
-        </button>
-        <button class="btn btn-mini" name="action" value="filter" type="submit">
-          <i class="icon-filter"></i>
-          Gunakan Filter
-        </button>
-        <button class="btn btn-mini" 
-                name="action"
-                value="reset">
-          Atur Ulang Filter
-        </button>
-      </div>
-      <div class="pull-right">
-        <?php echo $this->paginationControl($this->users, 'sliding', 'partial/pagination_control.phtml'); ?>
-      </div>
+        <div class="pull-left">
+            <h3 style="display: inline">Akun</h3>
+            <a href="<?php echo $this->url(array('action' => 'create')); ?>" class="btn btn-link label label-success">
+                Buat Akun
+            </a>
+        </div>
+        <div class="pull-right">
+            <?php echo $this->itemCountPerPageSelect('filter[row]', $this->filter['row']); ?>
+            <?php echo $this->setRowButton('action', 'filter'); ?>
+        </div>
     </div>
+    <br />
     <div class="row-fluid">
-      <table class="table table-striped table-condensed" id="account-table">
-        <thead>
-          <tr>
-            <th>
-              <input type="checkbox" onclick="
-                var checkboxes = $('#account-table tbody input:checkbox');
-                if($(this).attr('checked')) {
-                  $(checkboxes).attr('checked', true);
-                } else {
-                  $(checkboxes).removeAttr('checked');
-                }
-                     "/>
-            </th>
-<!--            <th></th>-->
-            <th colspan="2">Nama User</th>
-            <th>Nama Lengkap</th>
-            <th>Email</th>
-            <th>Role</th>
-            <th></th>
-          </tr>
-          <tr>
-            <th></th>
-            <!--<th></th>-->
-            <th colspan="2">
-              <?php
-              echo $this->formText('filter[username]', $this->filter['username'], array(
-                  'class' => 'span12',
-                  'placeholder' => 'Cari berdasarkan nama pengguna'
-              ));
-              ?>
-            </th>
-            <th>
-              <?php
-              echo $this->formText('filter[fullname]', $this->filter['fullname'], array(
-                  'class' => 'span12',
-                  'placeholder' => 'Cari berdasarkan nama lengkap'
-              ));
-              ?>
-            </th>
-            <th>
-              <?php
-              echo $this->formText('filter[email]', $this->filter['email'], array(
-                  'class' => 'span12',
-                  'placeholder' => 'Cari berdasarkan email'
-              ));
-              ?>
-            </th>
-            <th>
-              <?php
-              echo $this->formSelect('filter[role]', $this->filter['role'], array(
-                  'class' => 'span12'
-                      ), array(
-                  null => "--Tampilkan Semua ({$this->rolesCount['all']})",
-                  Admin_Model_Role::ADMIN => "Admin ({$this->rolesCount['admin']})",
-                  Admin_Model_Role::GURU => "Guru ({$this->rolesCount['guru']})",
-                  Admin_Model_Role::OSIS => "Osis ({$this->rolesCount['osis']})",
-                  Admin_Model_Role::SISWA => "Siswa ({$this->rolesCount['siswa']})"
-              ));
-              ?>
-            </th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <?php foreach ($this->users as $index => $user): ?>
-            <tr>
-              <td><input type="checkbox" name="accounts[]" value="<?php echo $user->username; ?>" id="" /></td>
-              <td>
-                <?php echo $this->thumbnail('avatar', $user->avatar, 'no-avatar.jpg', 32, 32); ?>
-              </td>
-              <td><?php echo $user->username; ?></td>
-              <td><?php echo $user->fullname; ?></td>
-              <td><?php echo $user->email; ?></td>
-              <td><?php echo $user->role; ?></td>
-              <td>
-                <a href="<?php echo $this->url(array('action' => 'edit', 'id' => $user->username)); ?>"
-                   title="Sunting">
-                  <i class="icon-edit"></i>
-                </a>
-                <a href="<?php echo $this->url(array('action' => 'delete', 'id' => $user->username)); ?>"
-                   title="Hapus"
-                   onclick="return confirm('Hapus akun \'<?php echo $user->username ?>\'?')">
-                  <i class="icon-trash"></i>
-                </a>
-              </td>
-            </tr>
-          <?php endforeach; ?>
-        </tbody>
-      </table>
+        <div class="row-fluid">
+            <div class="pull-left">
+                <button class="btn btn-mini btn-danger"
+                        name="action"
+                        value="delete"
+                        onclick="return confirm('Apakah anda yakin ingin menghapus semua akun yang dipilih?')">
+                    <i class="icon-trash"></i>
+                </button>
+                <button class="btn btn-mini" name="action" value="filter" type="submit">
+                    <i class="icon-filter"></i>
+                    Gunakan Filter
+                </button>
+                <button class="btn btn-mini"
+                        name="action"
+                        value="reset">
+                    Atur Ulang Filter
+                </button>
+            </div>
+            <div class="pull-right">
+                <?php echo $this->paginationControl($this->users, 'sliding', 'partial/pagination_control.phtml'); ?>
+            </div>
+        </div>
+        <div class="row-fluid">
+            <table class="table table-striped table-condensed" id="account-table">
+                <thead>
+                    <tr>
+                        <th>
+                            <input type="checkbox" onclick="
+                                var checkboxes = $('#account-table tbody input:checkbox');
+                                if ($(this).attr('checked')) {
+                                    $(checkboxes).attr('checked', true);
+                                } else {
+                                    $(checkboxes).removeAttr('checked');
+                                }
+                                   "/>
+                        </th>
+            <!--            <th></th>-->
+                        <th colspan="2">Nama User</th>
+                        <th>Nama Lengkap</th>
+                        <th>Email</th>
+                        <th>Role</th>
+                        <th></th>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <!--<th></th>-->
+                        <th colspan="2">
+                            <?php
+                            echo $this->formText('filter[username]', $this->filter['username'], array(
+                                'class'       => 'span12',
+                                'placeholder' => 'Cari berdasarkan nama pengguna'
+                            ));
+                            ?>
+                        </th>
+                        <th>
+                            <?php
+                            echo $this->formText('filter[fullname]', $this->filter['fullname'], array(
+                                'class'       => 'span12',
+                                'placeholder' => 'Cari berdasarkan nama lengkap'
+                            ));
+                            ?>
+                        </th>
+                        <th>
+                            <?php
+                            echo $this->formText('filter[email]', $this->filter['email'], array(
+                                'class'       => 'span12',
+                                'placeholder' => 'Cari berdasarkan email'
+                            ));
+                            ?>
+                        </th>
+                        <th>
+                            <?php
+                            echo $this->formSelect('filter[role]', $this->filter['role'], array(
+                                'class' => 'span12'
+                            ), array(
+                                null                     => "--Tampilkan Semua ({$this->rolesCount['all']})",
+                                SITi_Acl::ROLE_SISWA     => "Siswa ({$this->rolesCount['siswa']})",
+                                SITi_Acl::ROLE_GURU      => "Guru ({$this->rolesCount['guru']})",
+                                SITi_Acl::ROLE_HUBIN     => "Hubin ({$this->rolesCount['hubin']})",
+                                SITi_Acl::ROLE_KURIKULUM => "Kurikulum ({$this->rolesCount['kurikulum']})",
+                                SITi_Acl::ROLE_KESISWAAN => "Kesiswaan ({$this->rolesCount['kesiswaan']})"
+                            ));
+                            ?>
+                        </th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <?php foreach ($this->users as $index => $user): ?>
+                        <tr>
+                            <td><input type="checkbox" name="accounts[]" value="<?php echo $user->username; ?>" id="" /></td>
+                            <td>
+                                <?php echo $this->thumbnail('avatar', $user->avatar, 'no-avatar.jpg', 32, 32); ?>
+                            </td>
+                            <td><?php echo $user->username; ?></td>
+                            <td><?php echo $user->fullname; ?></td>
+                            <td><?php echo $user->email; ?></td>
+                            <td><?php echo $user->role; ?></td>
+                            <td>
+                                <a href="<?php echo $this->url(array('action' => 'edit', 'id'     => $user->username)); ?>"
+                                   title="Sunting">
+                                    <i class="icon-edit"></i>
+                                </a>
+                                <a href="<?php echo $this->url(array('action' => 'delete', 'id'     => $user->username)); ?>"
+                                   title="Hapus"
+                                   onclick="return confirm('Hapus akun \'<?php echo $user->username ?>\'?')">
+                                    <i class="icon-trash"></i>
+                                </a>
+                            </td>
+                        </tr>
+                    <?php endforeach; ?>
+                </tbody>
+            </table>
+        </div>
     </div>
-  </div>
 </form>
