Artikel yang pending hanya dapat dilihat oleh siswa yang membuatnya (sebagai preview);

--- a/application/views/scripts/article/view.phtml
+++ b/application/views/scripts/article/view.phtml
@@ -7,6 +7,13 @@ $auth = Zend_Auth::getInstance();
 <div class="main row-fluid">
     <div class="span8">
         <div class="content-inner">
+            <?php if ($this->article['status'] !== Admin_Model_Status::PUBLISH): ?>
+                <div class="alert alert-danger">
+                    Artikel ini berstatus <b><?php echo $this->article['status'] ?></b>
+                    yang berarti hanya dapat dilihat oleh anda saja.
+                </div>
+            <?php endif; ?>
+
             <blockquote id="article-title">
                 <h4><?php echo $this->article['title']; ?></h4>
                 <small>
