--- a/application/modules/admin/views/scripts/article/form.phtml
+++ b/application/modules/admin/views/scripts/article/form.phtml
@@ -27,17 +27,9 @@ $this->MinifyHeadScript()
                 </div>
             </div>
         </div>
-        <div class="span4">
-
-
-        </div>
-    </div>
-    <div class="row-fluid">
-        <div class="control-group">
-            <div class="controls">
-                <?php echo $this->form->submit; ?>
-                <?php echo $this->form->draft; ?>
-            </div>
+        <div class="span4 well">
+            <?php echo $this->form->submit; ?>
+            <?php echo $this->form->draft; ?>
         </div>
     </div>
 
