--- a/public/lib/gebo/css/style.css
+++ b/public/lib/gebo/css/style.css
@@ -730,7 +730,7 @@ a strong {
 input.title {
     font-size:1.6em;
     height: 32px;
-    padding: 12px 10px 10px 10px;
+    /*padding: 12px 10px 10px 10px;*/
     line-height: 100%;
 }
 
