--- a/application/modules/admin/views/scripts/article/approve.phtml
+++ b/application/modules/admin/views/scripts/article/approve.phtml
@@ -1,4 +1,163 @@
-<br /><br />
-<div id="view-content">
-	<p>View script for controller <b>Article</b> and script/action name <b>approve</b></p>
-</div>
+<?php echo $this->flashMessenger($this->messages); ?>
+
+<form action="" method="post">
+
+    <div class="row-fluid" style="margin-bottom: 20px">
+        <div class="pull-left">
+            <h3>Artikel Yang Sedang Menunggu Persetujuan</h3>
+        </div>
+        <div class="pull-right">
+            <?php
+            echo $this->formSelect('filter[row]', $this->filter['row'], array(
+                'style' => 'width:55px'), array(
+                5   => 5,
+                10  => 10,
+                15  => 15,
+                25  => 25,
+                50  => 50,
+                100 => 100
+            ));
+            ?>
+            <button name="action" value="filter" class="btn">Atur</button>
+        </div>
+    </div>
+
+
+
+    <div class="row-fluid">
+        <div class="row-fluid">
+            <div class="pull-left">
+                <button class="btn btn-mini btn-danger"
+                        name="action"
+                        value="delete"
+                        onclick="if (!confirm('Apakah anda yakin ingin menghapus semua artikel '
+                                        + 'yang dipilih?'))
+                                    return false;">
+                    <i class="icon-trash"></i>
+                </button>
+                <button class="btn btn-mini btn-success"
+                        name="action"
+                        value="approve"
+                        title='Setujui artikel yang dipilih'>
+                    <i class="icon-ok"></i>
+                </button>
+                <button class="btn btn-mini" name="action" value="filter">
+                    <i class="icon-filter"></i>
+                    Gunakan Filter
+                </button>
+                <button class="btn btn-mini" name="action" value="reset">
+                    Atur Ulang Filter
+                </button>
+            </div>
+            <div class="pull-right">
+                <?php echo $this->paginationControl($this->articles, 'sliding', 'partial/pagination_control.phtml'); ?>
+            </div>
+
+        </div>
+        <div class="row-fluid">
+            <table class="table table-striped table-condensed" id="article-table">
+                <thead>
+                    <!--HEAD-->
+                    <tr>
+                        <th>
+                            <input type="checkbox"
+                                   onchange="
+                                var checkboxes = $('#article-table tbody input:checkbox');
+                                if ($(this).attr('checked')) {
+                                    $(checkboxes).attr('checked', true);
+                                } else {
+                                    $(checkboxes).removeAttr('checked');
+                                }"/>
+                        </th>
+                        <th>Judul Artikel</th>
+                        <th>Dibuat Oleh</th>
+                        <th>Dibuat Tanggal</th>
+                        <th><i class="icon-tags"></i></th>
+                        <th></th>
+                    </tr>
+                    <!--FILTER-->
+                    <tr>
+                        <th></th>
+                        <th>
+                            <?php
+                            echo $this->formText('filter[title]', $this->filter['title'], array(
+                                'placeholder' => 'Cari berdasarkan judul artikel...'));
+                            ?>
+                        </th>
+                        <th></th>
+                        <th></th>
+                        <th>
+                            <?php
+                            echo $this->formText('filter[tag]', $this->filter['tag'], array(
+                                'placeholder' => 'Ketikan tag untuk pencarian'));
+                            ?>
+                        </th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <?php foreach ($this->articles as $index => $article): ?>
+                        <?php
+                        $viewUrl = $this->url(array(
+                            'module'     => 'default',
+                            'action'     => 'view',
+                            'controller' => 'article',
+                            'id'         => $article->id
+                        ));
+
+                        $editUrl = $this->url(array(
+                            'module'     => 'admin',
+                            'controller' => 'article',
+                            'action'     => 'edit',
+                            'id'         => $article->id,
+                            'return'     => 'approve'
+                        ));
+
+
+                        $deleteUrl = $this->url(array(
+                            'module'     => 'admin',
+                            'controller' => 'article',
+                            'action'     => 'delete',
+                            'id'         => $article->id,
+                            'return'     => 'approve'
+                        ));
+                        ?>
+
+                        <tr>
+                            <td>
+                                <input type="checkbox" name="articles[]"
+                                       value="<?php echo $article->id; ?>"/>
+                            </td>
+                            <td>
+                                <a href="<?php echo $viewUrl; ?>" target="_blank">
+                                    <strong><?php echo $article->title; ?></strong>
+                                </a>
+                            </td>
+                            <td><a href="#"><?php echo $article->created_by; ?></a></td>
+                            <td><?php echo Date('d F Y', strtotime($article->created_on)); ?></td>
+                            <td><?php echo $this->tags($article->tags); ?></td>
+                            <td>
+                                <a href="<?php echo $editUrl; ?>"
+                                   title="Sunting">
+                                    <i class="icon-edit"></i>
+                                </a>
+                                <a href="<?php echo $deleteUrl; ?>"
+                                   title="Hapus"
+                                   onclick="if (!confirm('Apakah anda yakin ingin menghapus artikel' +
+                                            ' ini?.'))
+                                        return false">
+                                    <i class="icon-trash"></i>
+                                </a>
+                                <a href="<?php echo $this->url(array('id' => $article->id)) ?>"
+                                   title="Setujui">
+                                    <i class="icon-ok"></i>
+                                </a>
+                            </td>
+                        </tr>
+                    <?php endforeach; ?>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+</form>
