Web Dev Checklist

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -33,7 +33,7 @@
             <a href="#highlight" class="carousel-control right" data-slide="next">&rsaquo;</a>
         </div>
     </div>
-    <div class="post span4 top-green" style="">
+    <div class="post span4 top-green">
         <div class="inner">
             <h4>Berita Terbaru</h4>
             <ul class="news-list">
@@ -55,7 +55,7 @@
 <div class="jurusan row-fluid">
     <div class="inner">
         <div class="span4">
-            <i class="icon-globe icon-2x" style="margin-left: 10px;"></i>
+            <i class="icon-globe icon-2x"></i>
             <h3>Rekayasa Perangkat Lunak</h3>
             <p>Rekayasa Perangkat Lunak, Teknik Komputer dan Jaringan, dan Multimedia.</p>
         </div>
