--- a/application/views/scripts/error/error.phtml
+++ b/application/views/scripts/error/error.phtml
@@ -1,4 +1,90 @@
-<div class="container">
-    
-    haaha
+<style>
+
+    #error-404{
+        width: 630px;
+        margin: 2em auto 0 auto;
+        border: 0;
+        outline: 0;
+        padding: 0;
+        vertical-align: baseline;
+
+    }
+
+    #error-404 img{
+        float: left;
+        margin: 0 55px 2em 0;
+        display: inline-block;
+    }
+
+    #error-message{
+        float: left;
+        width: 330px;
+        margin: -0.5em 0 0 0;
+
+    }
+
+    .jumbo h1{
+        font-size: 60px;
+        line-height: 1;
+        margin: 10px 0;
+        font-family: inherit;
+        font-weight: bold;
+        text-rendering: optimizelegibility;
+    }
+
+    @media(max-width:685px){
+
+        #error-404 img{
+            float: right;
+            width: 200px;
+            display: inline-block;
+        }
+        
+        #error-404{
+            width: 300px;
+            margin: 2em auto 0 auto;
+            border: 0;
+            outline: 0;
+            padding: 0;
+            vertical-align: baseline;
+
+        }
+
+        #error-message{
+            float: left;
+            width: 300px;
+            margin: -0.5em 0 0 0;
+
+        }
+    }
+
+</style>
+
+<div class="container-fluid">
+
+    <div id="error-404">
+        <img src="/img/question_mark_small.png" alt="Question Mark"/>
+
+        <div id="error-message">
+            <div class="alert alert-error">
+                <h1>404</h1>
+                <h4>
+                    Halaman tidak dapat ditemukan.
+                </h4>
+            </div>
+            
+            <div class="alert alert-block">
+                <button type="button" class="close" data-dismiss="alert">
+                    &times;
+                </button>
+                <h4>Perhatian</h4>
+                blalalala
+            </div>
+        </div>
+
+    </div>
+
+
+
 </div>
+
